sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:20: error: not found: value mem
		echange(mem,i)
                        ^